# a1-uncertainty-exploration

./: .gitignore  LICENSE  Makefile  README.md  SESSION0_REPORT.md  VALIDATION.md  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
analysis/: __init__.py  make_dummy_logs.py  make_figures.py
audits/: __init__.py  c13_audit.py
audits/c13/: c13_report.json
build_manifest/: pip_freeze_full.txt  versions.json
compute/: A1-compute-cost-and-free-tier-execution-plan-v1.0.md  A1-compute-cost-and-free-tier-execution-plan-v1.1.md  README.md  compute-plan-review-v1.0.md
compute/benchmarks/: RESULTS.md  results_local_cpu.json  results_modal_a10g.json  stage_a_benchmark.py
configs/: example_bdqn_deepsea_dev.yaml  example_ddqn_deepsea_dev.yaml  example_noisynet_deepsea_dev.yaml  example_rpbdqn_deepsea_dev.yaml
docs/: A1-claude-science-execution-plan-v4.3.md  README.md  a1-requirements-and-alternatives-v6.3.md
logs/: dummy_smoke.csv
protocol/: FREEZE_READINESS.md  advisor_onepager.md  positioning.md  preregistration.md
related_work/: positioning.md
src/: __init__.py  bdqn.py  config.py  ddqn.py  deep_sea.py  networks.py  noisynet.py  replay_buffer.py  trainer.py
src/diagnostics/: __init__.py  temporal_persistence.py
src/utils/: __init__.py  conventions.py
tests/: test_bdqn.py  test_config.py  test_conventions.py  test_ddqn.py  test_deep_sea.py  test_figures.py  test_noisynet.py  test_temporal_persistence.py  test_trainer.py
