[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a1-uncertainty-exploration"
version = "0.0.0"
description = "When Do Randomized Value Estimates Buy Exploration? Separating the estimator from the use rule under low interaction budgets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "Robert Meliksetyan" }]

# Pinned versions live in requirements.txt + build_manifest/pip_freeze_full.txt.
# torch is installed from the CPU wheel index (see requirements.txt header).
dependencies = [
    "torch==2.13.0",
    "gymnasium==1.3.0",
    "minatar==1.0.15",
    "rliable==1.2.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.17.1",
    "matplotlib==3.11.0",
    "seaborn==0.13.2",
    "pyyaml==6.0.3",
    "tyro==1.0.15",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.21"]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
